--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,6 +20,7 @@
 <h3 id="landing-text">A place where you can find the perfect breed and relevant adoption centers.</h3>
 <button class="uk-button uk-button-default uk-button-large" id="goAdopt">Adopt Dog</button>
 <button class="uk-button uk-button-default uk-button-large" id="helpShelter">Shelter Help</button>
+<button class="uk-button uk-button-default uk-button-large" id="addShelter">Add Shelter/Dogs</button>
 </div>
 </div>
 
